<resources>
    <string name="app_name">Aula-5</string>
    <string name="backspace"><![CDATA[<]]></string>
    <string name="equals">=</string>
    <string name="dot">.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="calculator">Calculadora</string>
    <string name="history">Histórico</string>
    <string name="other">Outros</string>
    <string name="sign_out">Sair</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="email">Email</string>
    <string name="map">Mapa</string>
</resources>
