<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_visor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:padding="16dp"
        android:textSize="40sp"
        android:gravity="end"
        android:text="0"
        android:textColor="#FFFFFF"
        android:background="@color/darkGrey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_Clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="C"
            android:textColor="#FFFFFF"
            android:backgroundTint="@android:color/darker_gray"/>
        <Button
            android:id="@+id/button_BackSpace"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="@string/backspace"
            android:textColor="#FFFFFF"
            android:backgroundTint="@android:color/darker_gray"/>
        <Button
            android:id="@+id/button_factorial"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="!"
            android:tag="!"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/orange"/>
        <Button
            android:id="@+id/button_divide"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="/"
            android:tag="/"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/orange"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="7"
            android:textColor="#FFFFFF"
            android:tag="7"
            android:backgroundTint="@color/darkGrey"/>

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="8"
            android:tag="8"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/darkGrey"/>
        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="9"
            android:tag="9"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/darkGrey"/>
        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="-"
            android:tag="-"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/orange"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="4"
            android:tag="4"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/darkGrey"/>

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="5"
            android:tag="5"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/darkGrey"/>
        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="6"
            android:tag="6"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/darkGrey"/>
        <Button
            android:id="@+id/button_mult"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="*"
            android:tag="*"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/orange"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="1"
            android:tag="1"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/darkGrey"/>

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="2"
            android:tag="2"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/darkGrey"/>

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="3"
            android:tag="3"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/darkGrey"/>

        <Button
            android:id="@+id/button_adition"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="+"
            android:tag="+"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/orange"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_0"
            android:layout_width="176dp"
            android:layout_height="match_parent"
            android:text="0"
            android:tag="0"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/darkGrey"/>

        <Button
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="@string/dot"
            android:tag="."
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/darkGrey"/>

        <Button
            android:id="@+id/button_equals"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:text="@string/equals"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/orange"/>
    </LinearLayout>
</LinearLayout>
